@@ -521,6 +521,17 @@ pythonpath = &quot;d:\\&quot;,c:/,
 names may be delimited using double-quotes (e.g., <tt class="docutils literal"><span class="pre">&quot;d:\\&quot;</span></tt>); names with
 embedded white space must be quoted.</p>
 </div>
+<div class="section">
+<h1><a id="icon-set-theme" name="icon-set-theme">Icon set theme</a></h1>
+<p>You can use this option to switch other icon set theme, the setting is:</p>
+<pre class="literal-block">
+[default]
+icontheme = tango
+</pre>
+<p>And you should esure that in UliPad's <tt class="docutils literal"><span class="pre">images</span></tt> directory it should have <tt class="docutils literal"><span class="pre">theme/tango</span></tt>
+directory, and all images will be placed there. If an image cann't be found in
+theme/XXXX directory, then it'll use image in <tt class="docutils literal"><span class="pre">images</span></tt> directory.</p>
+</div>
 </div>
 </body>
 </html>
